@@ -1,0 +1,7 @@
+#include <math.h>
+
+double
+fdim (double x, double y)
+{
+  return  (isgreater(x, y) ? (x - y) : 0.0);
+}
